<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cardio_generator</groupId>
    <artifactId>cardio_generator</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.resources.sourceEncoding>UTF-8</project.resources.sourceEncoding>

    </properties>

    <dependencies>

        <!-- Java-WebSocket for WebSocket client -->
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.2</version>
        </dependency>

	<dependency>
   	    <groupId>org.junit.jupiter</groupId>
    	    <artifactId>junit-jupiter</artifactId>
    	    <version>5.10.2</version>
    	    <scope>test</scope>
	</dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.5.6</version> <!-- Use the version that's compatible with your Spring Boot version -->
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.cardio_generator.HealthDataSimulator</mainClass>
                </configuration>
            </plugin>

	    <plugin>
    		<groupId>org.apache.maven.plugins</groupId>
    		<artifactId>maven-surefire-plugin</artifactId>
    		<version>3.2.5</version>
	    </plugin>

	    <plugin>
	    	<groupId>org.jacoco</groupId>
	    	<artifactId>jacoco-maven-plugin</artifactId>
	    	<version>0.8.10</version>
	    	<executions>
	    		<execution>
	    			<goals>
	    				<goal>prepare-agent</goal>
	    			</goals>
	    		</execution>
	    		<execution>
	    			<id>report</id>
	    			<phase>test</phase>
	    			<goals>
	    				<goal>report</goal>
	    			</goals>
	    		</execution>
	    	</executions>
	    </plugin>

	    <plugin>
	    	<groupId>org.codehaus.mojo</groupId>
	    	<artifactId>exec-maven-plugin</artifactId>
	    	<version>3.1.0</version>
	    	<configuration>
	    		<mainClass>com.cardio_generator.HealthDataSimulator</mainClass>
	    	</configuration>
	    </plugin>

        </plugins>
    </build>

</project>